CIMA_POC/Componentes_core/kubernetes/prometheus/prometheus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: cima-monitoring
  # annotations:
  #     kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik-lb
  tls:
  - hosts:
    - prometheus.cima.es
  rules:
    - host: prometheus.cima.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
